 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2013-09-03

- r1021 approximate component area [ver 1.3.6]
  - setGlobalCompoIdx_displayInfo()でグローバルなbboxから近似的な法線と面積を求める
  - calCompoArea(), projectCompo()追加
  - サブドメイン毎に配分されたポリゴンを出力するオプションを追加 C.Hide.GeomParaOutput
  
--------------------------
2013-09-02 

- r1020 change from isCDS() to isBinary()
  - isCDS() >> isBinary()に変更
  - fillSeed()で固体面に隣接するセルでもシード点の対象とする
  - Intrisic::setup()にfloat* cutを追加．バイナリでもカット情報を用いる方針にする
  - setOBCcut()は壁面のみ，対称条件は外す，bidへのエンコードも行う
  - ffv_SetBC内で局所境界条件をBinary/Cutで同一にする
  
--------------------------
2013-09-01

- r1019 backstep
  - vobc_drchltのバグ修正
  - Backstep(ColdFlow)
  - 温度計算の場合の媒質毎の初期値指定オプション

--------------------------
2013-08-31

- r1018 improve fill algorithm [ver 1.3.5]
  - /Referece/Mediumのエラーメッセージ変更
  - ポリゴンモデルを用いる場合に局所境界条件数が少なくとも一つあることを検査
  - fill()で固体IDを求めるアルゴリズムを修正
  - fillプロセスの修正
  - fill関連のセルカウントをunsigned longへ変更
  - openmpのfirstprivate化のためにワークリストの配列を[64]固定に変更

--------------------------
2013-08-30

- r1017 modify OuterBC policy
  - OuterBCの実装ポリシーを変更．周期境界は全ランクが参加する必要があるので，事前に非外部BCランクを排除しない
  - 各ランクのbc[]には同じ値を保持

--------------------------
2013-08-29

- r1016 change fileout timing of cellmonitor
  - セルモニターのファイル出力のタイミングを tg_sampled から tg_history へ変更

--------------------------
2013-08-24

- r1015 bugfix print outer BC
  - OuterBCの表示が不正であったバグを修正
  - SHC1Dをexampleに収録
  - 2Dcavity, Cabity_Binary, LDC, Jet, PMT, Sphere の入力ファイルをアップデート
  - OuterTBCface()で熱量収支のallreduceを行う方針（従来は，個別のメソッド内で実施．冒頭に書いた領域内のときのreturnでデッドロックになるバグ）
  - ConvergenceMonitorを導入し，流動と熱の定常状態をモニター

--------------------------
2013-08-22

- r1014 update ffvc_ug.pdf ver 0.8.0
